tests/reference/asr-test_const_list_pop-568b207.stderr
semantic error: Type name is not implemented yet.
 --> tests/errors/test_const_list_pop.py:7:5
  |
7 |     CONST_INTEGER_LIST.pop()
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ 
